Add use cases for all type of elementary actions in json retrocompatibility test and exhaustive crac creation test
Signed-off-by: Pauline Jean-Marie <pauline.jean-marie@artelys.com>